--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-h5-audio-player": "^3.8.5",
+    "react-ionicons": "^4.2.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
@@ -40,8 +41,8 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.8",
+    "netlify-cli": "^11.5.1",
     "postcss": "^8.4.16",
-    "tailwindcss": "^3.1.8",
-    "netlify-cli": "^11.5.1"
+    "tailwindcss": "^3.1.8"
   }
 }
