--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-h5-audio-player": "^3.8.5",
     "react-ionicons": "^4.2.0",
     "react-scripts": "5.0.1",
+    "react-router-dom": "^6.3.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
