--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "react-dom": "^18.2.0",
     "react-h5-audio-player": "^3.8.5",
     "react-ionicons": "^4.2.0",
-    "react-scripts": "5.0.1",
     "react-router-dom": "^6.3.0",
+    "react-scripts": "5.0.1",
+    "react-slick": "^0.29.0",
+    "slick-carousel": "^1.8.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
